deployments/ngix_ingress.yml
apiVersion: networking.k8s.io/v1               #Specifica la versione dell'API Kubernetes
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:                                        #Protocollo HTTP per le regole.
      paths:
      - path: /                                  #Imposta il percorso come "/" (root), il che significa che gestira tutte le richieste.
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
